log
Sat 24 Sep 2022 12:08:17 AM UTC: 
 tests:  1|8
total_score: 0/70
5b8dd1a
Mon 26 Sep 2022 12:40:08 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f2923c5
Mon 26 Sep 2022 12:40:24 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:29: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |         return tree->current->pair;
      |                ~~~~~~~~~~~~~^~~~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0de483
Mon 26 Sep 2022 12:41:07 AM UTC: 
 treemap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  11|6
total_score: 15/70
567e85a
Mon 26 Sep 2022 12:43:31 AM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
test.c: In function ‘minimum’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
bbb6b1e
Mon 26 Sep 2022 12:44:08 AM UTC: 
 treemap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
63ea1b8
